Added remainder of endpoints to API.
