# controllers/controllers.py
@@ -1,6 +1,18 @@
-from flask import abort
+from flask import abort, make_response
 from core import db
 from models import BlogPost, PostSchema
+
+
+def api_posts_read_all():
+    """api_posts_read_all
+
+    # noga: E501
+    """
+    posts = BlogPost.query.all()
+    post_schema = PostSchema(many=True)
+    data = post_schema.dump(posts).data
+
+    return data
 
 
 def api_posts_read_post(title):  # noqa: E501
@@ -21,7 +33,7 @@ def api_posts_read_post(title):  # noqa: E501
         abort(404, f'{title} not found!')
 
 
-def api_posts_update_post(Payload=None):  # noqa: E501
+def api_posts_update_post(title, Payload=None):  # noqa: E501
     """api_posts_update_post
 
      # noqa: E501
@@ -29,9 +41,25 @@ def api_posts_update_post(Payload=None):  # noqa: E501
     :param Payload: Edit existing post
     :type Payload: dict | bytes
 
+    :param title: Post to update.
+    :type title: str
+
     :rtype: None
     """
-    pass
+    page = BlogPost.query.filter(BlogPost.title == title).one_or_none()
+
+    if page is not None:
+        schema = BlogPost()
+        update = schema.load(Payload, session=db.session).data
+        update.title = page.title
+        db.session.merge(update)
+        db.session.commit()
+        data = schema.dump(page).data
+
+        return data, 200
+
+    else:
+        abort(404, f'{title} not found!')
 
 
 def api_posts_delete_post(title):  # noqa: E501
@@ -44,7 +72,13 @@ def api_posts_delete_post(title):  # noqa: E501
 
     :rtype: None
     """
-    return 'do some magic!'
+    page = BlogPost.query.filter(BlogPost.title == title).one_or_none()
+    if page is not None:
+        db.session.delete(page)
+        db.session.commit()
+        return make_response(f'Deleted {title}', 200)
+    else:
+        abort(404, f'{title} not found!')
 
 
 def api_posts_new_post(Payload=None):  # noqa: E501
@@ -58,7 +92,8 @@ def api_posts_new_post(Payload=None):  # noqa: E501
     :rtype: None
     """
     title = Payload.get('title')
-    existing_post = BlogPost.query.filter(title).one_or_none()
+    print(type(Payload), type(title))
+    existing_post = BlogPost.query.filter(BlogPost.title == title).one_or_none()
     if existing_post is None:
         schema = PostSchema()
         new_post = schema.load(Payload, session=db.session).data
@@ -66,6 +101,7 @@ def api_posts_new_post(Payload=None):  # noqa: E501
         db.session.commit()
 
         return schema.dump(new_post).data, 201
+
     else:
         abort(409, f'{title} already exists!')
 
